--- a/app/bootstrap.html
+++ b/app/bootstrap.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html ng-app="myApp">
+<html xmlns:ng="http://angularjs.org">
   <head>
-    <title>AngularJS Exmaple</title>
+    <title>Bootstrap - Manual Initialization</title>
 
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap-responsive.css">
@@ -9,11 +9,8 @@
   </head>
   <body ng-controller="MyCtrl">
     
-    <div>
-      <input ng-model="name"><br/>
-      <textarea ng-model="html"></textarea><br/>
-      <div compile="html" type="test"></div>
-    </div>
+    Hello {{world}}!
+
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
@@ -22,6 +19,6 @@
       window.angular || document.write('<script src="vendor/angularjs/angular.js"><\/script>');
     </script>
     <script src="./vendor/bootstrap/js/bootstrap.js"></script>
-    <script src="./js/compile.js"></script>
+    <script src="./js/bootstrap.js"></script>
   </body>
 </html>
