add an example for inherit directive

--- a/app/service-factory-provider.html
+++ b/app/service-factory-provider.html
@@ -50,6 +50,7 @@
       });
       
       app.config(["helloWorldProvider",function(helloWorldProvider){
+        console.info("app.config");
         helloWorldProvider.setName("Provider");
       }]);
       
