--- a/app/directive.html
+++ b/app/directive.html
@@ -60,11 +60,16 @@
     </div>
 
     <hr/>
+    <div scope-load-sequence>
+    </div>
+
+    <hr/>
     <div>
-      <button ng-click="show=true">show</button>
-      <dialog title="Hello {{name}}" visible="show" on-cancel="show=false;" on-ok="show=false;">
-        Body goes here: {{name}} is {{title}}
-      </dialog>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
