--- a/app/popup.html
+++ b/app/popup.html
@@ -5,14 +5,19 @@
 
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="css/bootstrap-overwrite.css">
     
   </head>
-  <body ng-controller="MyCtrl">
+  <body ng-controller="MyCtrl" style="padding:20px;" id="ctrl">
+
+    <input type="textbox" ng-model="text" tooltip tt-content="{{text}}" tt-placement="bottom" tt-popupdelay="300" id="textbox1">
     
+    <hr/>
+
+    <input class="btn" type="button" value="Click Me" filter-popup id="btn1">
+
     <div>
-      <input ng-model="name"><br/>
-      <textarea ng-model="html"></textarea><br/>
-      <div compile="html" type="test"></div>
+      {{text}}
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -22,7 +27,9 @@
       window.angular || document.write('<script src="vendor/angularjs/angular.js"><\/script>');
     </script>
     <script src="./vendor/bootstrap/js/bootstrap.js"></script>
-    <script src="./js/compile.js"></script>
-    <script src="./js/compile.js"></script>
+    <script src="./js/popup/tea.directives.js"></script>
+    <script src="./js/popup/components/components.js"></script>
+    <script src="./js/popup/teaPopup.js"></script>
+    <script src="./js/popup.js"></script>
   </body>
 </html>
