--- a/src/binding/index.html
+++ b/src/binding/index.html
@@ -1,31 +1,61 @@
 <!doctype html>
-<html ng-app="">
-  <head>
-    <title>AngularJS Exmaple - Template</title>
+<!-- <html ng-app="">
+-->
+<html>
+<head>
+  <title>AngularJS Exmaple - Binding</title>
 
-    <link rel="stylesheet" href="../../vendor/bootstrap/docs/assets/css/bootstrap.css">
-    <!-- <link rel="stylesheet" href="../../vendor/bootstrap/docs/assets/css/bootstrap-responsive.css"> -->
-    <link rel="stylesheet" href="../../vendor/google-code-prettify/src/prettify.css">
-    <link rel="stylesheet" href="./css/main.css">
-    
-  </head>
-  <body onload="prettyPrint()">
-    <div class="marketing">
-      <h2>Application Template</h2>
-    </div>
+  <link rel="stylesheet" href="../../vendor/bootstrap/docs/assets/css/bootstrap.css">
+  <!-- <link rel="stylesheet" href="../../vendor/bootstrap/docs/assets/css/bootstrap-responsive.css">
+  -->
+  <link rel="stylesheet" href="../../vendor/google-code-prettify/src/prettify.css">
+  <link rel="stylesheet" href="./css/main.css"></head>
+<body onload="prettyPrint()">
+  <div class="marketing">
+    <h2>AngularJS Exmaple - Binding</h2>
+    <button class="btn" type="button" onClick="bootstrap();" title="Click this button to bootstrap your application.">Bootstrap</button>
+  </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="span12">
+  <div class="container" ng-controller="MyCtrl">
+    <div class="row">
+      <div class="span12">
+        <p>The ngBind attribute tells Angular to replace the text content of the specified HTML element with the value of a given expression, and to update the text content when the value of that expression changes.</p>
+        <ol>
+          <li>1+1 = {{1+1}}</li>
+          <li>2*3 = {{2*3}}</li>
+          <li>Name: {{'Blithe'+ ' Xu'}}</li>
+          <li>
+            <input type="text" ng-model="who"/>
+            <div>{{'Hello, '+ who}}</div>
+          </li>
+        </ol>
+
+        <hr/>
+
+        <!-- Note -->
+        <div class="alert alert-info">
+          It is preferrable to use ngBind instead of curly markup. If you use curly markup, when AngularJS compile time, user will see markup.
         </div>
+        <div>Use curly markup: {{text}}</div>
+        <dl>
+          <dt>Add ng-cloak to class</dt>
+          <dd>
+            <div class="ng-cloak">Use curly markup: {{text}}</div>
+          </dd>
+          <dt>Use ng-bind instead of curly markup.</dt>
+          <dd>
+            <div ng-bind="'Use ng-bind:'+text"></div>
+          </dd>
+        </dl>
       </div>
     </div>
-  
-    <script src="../../vendor/angular/angular.js"></script>
-    <script src="../../vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="../../vendor/jquery/jquery.js"></script>
-    <script src="../../vendor/bootstrap/docs/assets/js/bootstrap.js"></script>
-    <script src="../../vendor/google-code-prettify/src/prettify.js"></script>
-    <script src="./js/main.js"></script>
-  </body>
+  </div>
+
+  <script src="../../vendor/angular/angular.js"></script>
+  <script src="../../vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="../../vendor/jquery/jquery.js"></script>
+  <script src="../../vendor/bootstrap/docs/assets/js/bootstrap.js"></script>
+  <script src="../../vendor/google-code-prettify/src/prettify.js"></script>
+  <script src="./js/main.js"></script>
+</body>
 </html>
