--- a/index.html
+++ b/index.html
@@ -65,8 +65,16 @@
             <a href="src/binding/index.html">AngularJS - Binding</a>
           </dt>
           <dd>
-            
+            The ngBind attribute tells Angular to replace the text content of the specified HTML element with the value of a given expression, and to update the text content when the value of that expression changes
           </dd>
+
+          <dt>
+            <a href="src/controller/index.html">AngularJS - Controller</a>
+          </dt>
+          <dd>
+            The ngController directive attaches a controller class to the view. This is a key aspect of how angular supports the principles behind the Model-View-Controller design pattern.
+          </dd>
+
         </dl>
       </div>
       <div class="span2"></div>
