Add expression example

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html ng-app="">
+<!-- <html ng-app=""> -->
+<html>
 <head>
   <title>AngularJS Exmaple - Template</title>
 
@@ -59,6 +60,13 @@
           </dt>
           <dd>
             This is a template for you to create your own example. It includes almost every libraries you need.
+          </dd>
+
+          <dt>
+            <a href="src/expression/index.html">AngularJS - Expression</a>
+          </dt>
+          <dd>
+            Expressions are Javascript-like code snippets that are usually placed in bindings such as {{ expression }}
           </dd>
 
           <dt>
