update binding and overview example

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           </dd>
 
           <dt>
+            <a href="src/app template/index.html">Application Template</a>
+          </dt>
+          <dd>
+            This is a template for you to create your own example. It includes almost every libraries you need.
+          </dd>          
+
+          <dt>
             <a href="src/expression/index.html">AngularJS - Expression</a>
           </dt>
           <dd>
