--- a/src/binding/index.html
+++ b/src/binding/index.html
@@ -2,6 +2,7 @@
 <!-- <html ng-app="">
 -->
 <html>
+<!-- <html ng-app=""> -->
 <head>
   <title>AngularJS Exmaple - Binding</title>
 
@@ -24,6 +25,7 @@
           <li>1+1 = {{1+1}}</li>
           <li>2*3 = {{2*3}}</li>
           <li>Name: {{'Blithe'+ ' Xu'}}</li>
+          <li>{{testString}}</li>
           <li>
             <input type="text" ng-model="who"/>
             <div>{{'Hello, '+ who}}</div>
