--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
       <div class="span8">
         <dl>
 
-          <dt>
+<!--           <dt>
             <a href="src/app template/index.html">Application Template</a>
           </dt>
           <dd>
             This is a template for you to create your own example. It includes almost every libraries you need.
-          </dd>
+          </dd> -->
 
           <dt>
-            <a href="src/app template/index.html">Application Template</a>
+            <a href="src/overview/index.html">AngularJS - Overview</a>
           </dt>
           <dd>
-            This is a template for you to create your own example. It includes almost every libraries you need.
+            To show the most important concept of Angular: Template, Directives, Model, Scope, Expressions, Compiler ...
           </dd>          
 
           <dt>
