### add two feature: * add a function to scope * add an object to scope

--- a/src/expression/index.html
+++ b/src/expression/index.html
@@ -54,7 +54,7 @@
               </div>
               <div>
                 <label>Attribute Value:</label>
-                <input type="text" style="width:400px" ng-model="attrValue" placeholder="Please input the value for the attribute name you input before"/>
+                <textarea style="width:400px" ng-model="attrValue" placeholder="Please input the value for the attribute name you input before"></textarea>
               </div>
               <div>
                 <button type="button" class="btn" ng-disabled="form.$invalid" ng-click="addAttribute()">Add</button>
